Fix the style of speech bubbles with gaps

--- a/src/styles/components/_issues.scss
+++ b/src/styles/components/_issues.scss
@@ -131,7 +131,7 @@ div#update .jstTabs.tabs li a {
         background-color: $color-history-bg;
         position: absolute;
         left: 6px;
-        top: 16px;
+        top: 19px;
         border-radius: 50%;
         box-shadow: 0 0 0 3px $color-timeline;
         z-index: 1;
@@ -148,7 +148,7 @@ div#update .jstTabs.tabs li a {
       }
 
       &:first-of-type:after {
-        top: 15px;
+        top: 19px;
       }
 
       &:last-of-type:after {
@@ -189,13 +189,12 @@ div#update .jstTabs.tabs li a {
         &:before {
           content: '';
           position: absolute;
-          left: -6px;
-          top: 8px;
-          width: 0;
-          height: 0;
-          border-top: 5px solid transparent;
-          border-bottom: 5px solid transparent;
-          border-right: 6px solid $color-note-title-bg;
+          left: -8px;
+          top: 50%;
+          transform: translateY(-50%);
+          border-width: 7px 10px 7px 0;
+          border-style: solid;
+          border-color: transparent $color-note-title-bg transparent transparent;
         }
 
         .gravatar {
